Update Buổi 9 - Cấu trúc điều kiện.ipynb

--- a/Buổi 9 - Cấu trúc điều kiện.ipynb
+++ b/Buổi 9 - Cấu trúc điều kiện.ipynb
@@ -523,11 +523,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "55a41fe7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào năm đi nè: 1996\n",
+      "366\n",
+      "367\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import *\n",
+    "nam = int(input(\"Nhập vào năm đi nè: \"))\n",
+    "\n",
+    "if int(nam) % 4 == 0: # Nếu năm đó chia hết cho 4 xét\n",
+    "    if str(nam)[-2:] == \"00\" and nam % 400 != 0: # 2 chữ số cuối của năm là \"00\" và năm đó KHÔNG chia hết cho 400 thì \n",
+    "        ngay = 365 # năm đó KHÔNG phải là năm nhuận\n",
+    "    else:\n",
+    "        ngay = 366 # ngược lại thì tức LÀ năm nhuận\n",
+    "else:\n",
+    "    ngay = 365 # còn lại tất cả các năm khác đều là năm KHÔNG nhuận\n",
+    "print(ngay)\n",
+    "\n",
+    "# if nam == 1997:\n",
+    "#     nam_dac_biet = 365\n",
+    "# elif nam < 1997:\n",
+    "#     nam_dac_biet = 1\n",
+    "# else:\n",
+    "#     nam_dac_biet = 0\n",
+    "\n",
+    "cach_nhau_ngay = (nam - 1997) * ngay\n",
+    "    \n",
+    "print(cach_nhau_ngay)\n",
+    "\n",
+    "#print(\"Kể từ đầu năm 1997 đến cuối năm\", nam,\"cách nhau:\", cach_nhau, \"ngày!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -539,14 +574,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "056920c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Số đâu đưa đây lè lẹ đi để tui còn tính cho nữa nào? Lề mề quá đó! :D 25.000\n",
+      "Ừm đúng roài, 25 là một số chính phương đó!\n",
+      "Theo như tui tính toán và chắc chắn là không thể sai được thì 25 chính là bình phương của một số lẻ aka số 5 nè!\n"
+     ]
+    }
+   ],
    "source": [
     "# Số chính phương bằng bình phương của một số tự nhiên\n",
-    "a = input()\n",
-    "if a**0.5 = "
+    "a = float(input(\"Số đâu đưa đây lè lẹ đi để tui còn tính cho nữa nào? Lề mề quá đó! :D \"))\n",
+    "if a < 0:\n",
+    "\tprint(\"Hey nhập lại đi nè. Số âm làm sao có thể là một số chính phương aka bình phương của một số (nguyên) được cơ chứ?!\")\n",
+    "elif a ** 0.5 == int(a ** 0.5):\n",
+    "\tprint(\"Ừm đúng roài,\", int(a), \"là một số chính phương đó!\")\n",
+    "\tif a ** 0.5 % 2 == 0:\n",
+    "\t\tprint(\"Theo như tui tính toán và chắc chắn là không thể sai được thì\", int(a), \"chính là bình phương của một số chẵn aka số\", int(a ** 0.5), \"nè!\")\n",
+    "\telse:\n",
+    "\t\tprint(\"Theo như tui tính toán và chắc chắn là không thể sai được thì\", int(a), \"chính là bình phương của một số lẻ aka số\", int(a ** 0.5), \"nè!\")\n",
+    "elif a % int(a) == 0:\n",
+    "\tprint(\"Chậc chậc thật tiếc quá đi, số\", int(a), \"mà bạn vừa nhập không phải là một số chính phương đâu nha!\")\n",
+    "else:\n",
+    "\tprint(\"Chậc chậc thật tiếc quá đi, số\", a, \"mà bạn vừa nhập không phải là một số chính phương đâu nha!\")"
    ]
   },
   {
@@ -569,7 +625,24 @@
    "id": "1c8e7631",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ghd = 0\n",
+    "ght = 100\n",
+    "sodoan = (ght+ghd)//2\n",
+    "solandoan = 1\n",
+    "tl = input(\"Tui đoán số bạn nghĩ là: \" + str(sodoan))\n",
+    "for i in range(7):\n",
+    "    if tl != \"=\":\n",
+    "        solandoan += 1\n",
+    "        if tl == \">\":\n",
+    "            ghd = sodoan + 1\n",
+    "        elif tl == \"<\":\n",
+    "            ght = sodoan - 1\n",
+    "        sodoan = (ght+ghd)//2\n",
+    "        tl = input(\"Tui đoán số bạn nghĩ là: \" + str(sodoan))\n",
+    "\n",
+    "print(\"Số mình đoán là:\",sodoan,\"trong\",solandoan,\"lần đoán\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -591,11 +664,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2216047d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập cạnh a: 300\n",
+      "Nhập cạnh b: 400\n",
+      "Nhập cạnh c: 500\n",
+      "Đây là tam giác vuông!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 3 cạnh tạo thành 1 tam giác KHI tổng 2 cạnh bất kỳ phải lớn hơn cạnh còn lại\n",
+    "## t.goto(cặp tọa độ x,y)\n",
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "a = float(input('Nhập cạnh a: '))\n",
+    "b = float(input('Nhập cạnh b: '))\n",
+    "c = float(input('Nhập cạnh c: '))\n",
+    "\n",
+    "if a > b:\n",
+    "    a, b = b, a\n",
+    "if a > c:\n",
+    "    a, c = c, a\n",
+    "if b > c:\n",
+    "    b, c = c, b\n",
+    "\n",
+    "if (a + b > c) and (a + c > b) and (b + c > a) and a > 0 and b > 0 and c > 0:\n",
+    "    if (a == b == c):\n",
+    "        print(\"Đây là tam giác đều!\")\n",
+    "        for i in range(3):\n",
+    "            t.fd(a)\n",
+    "            t.left(120)\n",
+    "    elif (a == b) or (a == c) or (b == c):\n",
+    "        if (a**2 + b**2 == c**2):\n",
+    "            print(\"Đây là tam giác vuông cân!\")\n",
+    "            t.fd(c)\n",
+    "            t.left(135)\n",
+    "            t.fd(a)\n",
+    "            t.left(90)\n",
+    "            t.fd(a)\n",
+    "        else:\n",
+    "            print(\"Đây là tam giác cân!\")\n",
+    "            cb = b\n",
+    "            if (a == b):\n",
+    "                cd = c ## cạnh đáy\n",
+    "            else: ## a không thể bằng c được\n",
+    "                cd = a   \n",
+    "            h = (cb**2 - (cd/2)**2)**0.5\n",
+    "            print(h)\n",
+    "            t.fd(cd)\n",
+    "            t.goto(cd/2,h)\n",
+    "            t.goto(0,0)  \n",
+    "    elif (a**2 + b**2 == c**2):\n",
+    "        print(\"Đây là tam giác vuông!\")\n",
+    "        t.fd(a)\n",
+    "        t.goto(0,b)\n",
+    "        t.goto(0,0)\n",
+    "    else:\n",
+    "        print(\"Đây là tam giác thường!\")\n",
+    "else:\n",
+    "    print(\"Không thể tạo thành tam giác!\")"
+   ]
   }
  ],
  "metadata": {
