--- a/Buổi 14 - Thực hành vòng lặp for.ipynb
+++ b/Buổi 14 - Thực hành vòng lặp for.ipynb
@@ -14,11 +14,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "778a2671",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một số đi ạ: 6\n",
+      "6 x 0 = 0\n",
+      "6 x 1 = 6\n",
+      "6 x 2 = 12\n",
+      "6 x 3 = 18\n",
+      "6 x 4 = 24\n",
+      "6 x 5 = 30\n",
+      "6 x 6 = 36\n",
+      "6 x 7 = 42\n",
+      "6 x 8 = 48\n",
+      "6 x 9 = 54\n",
+      "6 x 10 = 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "so = int(input(\"Hãy nhập vào một số đi ạ: \"))\n",
+    "\n",
+    "for i in range(11):\n",
+    "\n",
+    "\tprint(so, \"x\", i, \"=\", so * i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,11 +90,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "692e3585",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi có 2 số nguyên cách nhau bởi dấu phẩy: 6,5\n",
+      "11\n",
+      "Hãy nhập vào một chuỗi có 2 số nguyên cách nhau bởi dấu phẩy: 5,6\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi có 2 số nguyên cách nhau bởi dấu phẩy: \")\n",
+    "tong = 0\n",
+    "for i in a:\n",
+    "\tif i.isdigit():\n",
+    "\t\ttong += int(i)\n",
+    "print(tong)\n",
+    "\n",
+    "# Or\n",
+    "\n",
+    "a = input(\"Hãy nhập vào một chuỗi có 2 số nguyên cách nhau bởi dấu phẩy: \")\n",
+    "tong = 0\n",
+    "for i in a:\n",
+    "\tif i != \",\":\n",
+    "\t\ttong += int(i)\n",
+    "print(tong)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,11 +135,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ce5aa114",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi chỉ có số nguyên dương: 6 Fake 1 Faker 2\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi chỉ có số nguyên dương: \")\n",
+    "sum = 0\n",
+    "for i in a:\n",
+    "\tif i.isdigit():\n",
+    "\t\tsum += int(i)\n",
+    "print(sum)"
+   ]
   },
   {
    "attachments": {
@@ -195,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
