Update The 21 Game.ipynb

--- a/Learn/Cấu trúc lặp for/The 21 Game.ipynb
+++ b/Learn/Cấu trúc lặp for/The 21 Game.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "id": "07619b4b",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
