Update Buổi 15 - Hàm và Module.ipynb

--- a/Buổi 15 - Hàm và Module.ipynb
+++ b/Buổi 15 - Hàm và Module.ipynb
@@ -330,11 +330,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e405d1d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào một số a để vẽ các hình: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "import turtle as t\n",
+    "\n",
+    "def tron(a):\n",
+    "    t.circle(a/2)\n",
+    "    t.pu()\n",
+    "    t.fd(a/2 + 10)\n",
+    "    t.pd()\n",
+    "    \n",
+    "def vuong(a):\n",
+    "    for i in range(4):\n",
+    "        t.fd(a)\n",
+    "        t.lt(90)\n",
+    "    t.pu()\n",
+    "    t.fd(a + 10)\n",
+    "    t.pd()\n",
+    "    \n",
+    "def tam_giac_deu(a):\n",
+    "    for i in range(3):\n",
+    "        t.fd(a)\n",
+    "        t.lt(120)\n",
+    "    t.pu()\n",
+    "    t.fd(a + 10)\n",
+    "    t.pd()\n",
+    "\n",
+    "a = int(input(\"Nhập vào một số a để vẽ các hình: \"))\n",
+    "    \n",
+    "tron(a)\n",
+    "vuong(a)\n",
+    "tam_giac_deu(a)"
+   ]
   }
  ],
  "metadata": {
