Update Buổi 16 - Thực hành hàm.ipynb

--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -14,11 +14,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1974966b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 x 1 = 8\n",
+      "8 x 2 = 16\n",
+      "8 x 3 = 24\n",
+      "8 x 4 = 32\n",
+      "8 x 5 = 40\n",
+      "8 x 6 = 48\n",
+      "8 x 7 = 56\n",
+      "8 x 8 = 64\n",
+      "8 x 9 = 72\n",
+      "8 x 10 = 80\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cuu_chuong(a,b):\n",
+    "    if a > b:\n",
+    "        for i in range(1,11):\n",
+    "            print(a,\"x\",i,\"=\",a*i)\n",
+    "    elif b > a:\n",
+    "        for i in range(1,11):\n",
+    "            print(b,\"x\",i,\"=\",b*i)\n",
+    "    else:\n",
+    "        print(\"2 số bằng nhau!\")\n",
+    "\n",
+    "cuu_chuong(6,8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,11 +78,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "05de1584",
+   "execution_count": 6,
+   "id": "32accde0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xin chào , các bạn có khỏe không hả các bạn?\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def xoa_chuoi(a, b):\n",
+    "    if a.find(b):\n",
+    "        a = a[:a.index(b)] + a[a.index(b) + len(b):]\n",
+    "        \n",
+    "    print(a)\n",
+    "        \n",
+    "a = \"xin chào các bạn, các bạn có khỏe không hả các bạn?\"\n",
+    "\n",
+    "b = \"các bạn\"\n",
+    "\n",
+    "c = xoa_chuoi(a, b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b7d49fb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def xoa_chuoi(a, b):\n",
+    "    for b in a:\n",
+    "        if a.find(b):\n",
+    "            a = a[:a.index(b)] + a[a.index(b) + len(b):]\n",
+    "        else:\n",
+    "            continue\n",
+    "            \n",
+    "    print(a)\n",
+    "        \n",
+    "a = \"xin chào các bạn, các bạn có khỏe không hả các bạn?\"\n",
+    "\n",
+    "b = \"các bạn\"\n",
+    "\n",
+    "c = xoa_chuoi(a, b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ebe68ef6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xin chào ,  có khỏe không hả ?\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "###### ĐÚNG NÈEEEEEEEEEEEEEEEEEEEEEEEE\n",
+    "\n",
+    "def xoa_chuoi(a, b):\n",
+    "    if a.index(b) > 0:\n",
+    "        a = a.replace(b, \"\")\n",
+    "\n",
+    "    print(a)\n",
+    "        \n",
+    "a = \"xin chào các bạn, các bạn có khỏe không hả các bạn?\"\n",
+    "\n",
+    "b = \"các bạn\"\n",
+    "\n",
+    "c = xoa_chuoi(a, b)\n",
+    "\n",
+    "print(c)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,11 +192,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "875d88f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập mật khẩu dzô nè: Bodoi@123\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def kiem_tra_mat_khau(chuoi):\n",
+    "    kiem_tra = False\n",
+    "    kiem_tra_1 = False\n",
+    "    kiem_tra_2 = False\n",
+    "    kiem_tra_3 = False\n",
+    "    kiem_tra_4 = False\n",
+    "    \n",
+    "    for ki_tu in chuoi:\n",
+    "        if ki_tu.isupper():\n",
+    "            kiem_tra_1 = True\n",
+    "        elif ki_tu.islower():\n",
+    "            kiem_tra_2 = True\n",
+    "        elif ki_tu.isdigit():\n",
+    "            kiem_tra_3 = True\n",
+    "        elif not ki_tu.isalpha() or not ki_tu.isdigit:\n",
+    "            kiem_tra_4 = True\n",
+    "            \n",
+    "    kiem_tra = kiem_tra_1 and kiem_tra_2 and kiem_tra_3 and kiem_tra_4\n",
+    "    \n",
+    "    print(kiem_tra)\n",
+    "    \n",
+    "mat_khau = input(\"Nhập mật khẩu dzô nè: \")\n",
+    "\n",
+    "kiem_tra_mat_khau(mat_khau)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
