--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -17,7 +17,7 @@
    "execution_count": 5,
    "id": "1974966b",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -79,8 +79,10 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "32accde0",
-   "metadata": {},
+   "id": "87ff080a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -92,6 +94,8 @@
     }
    ],
    "source": [
+    "# SAI\n",
+    "\n",
     "def xoa_chuoi(a, b):\n",
     "    if a.find(b):\n",
     "        a = a[:a.index(b)] + a[a.index(b) + len(b):]\n",
@@ -110,9 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5b7d49fb",
+   "id": "43958b8f",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -125,6 +129,8 @@
     }
    ],
    "source": [
+    "# BÍ\n",
+    "\n",
     "def xoa_chuoi(a, b):\n",
     "    for b in a:\n",
     "        if a.find(b):\n",
@@ -146,8 +152,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ebe68ef6",
-   "metadata": {},
+   "id": "69b8ce0f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -194,7 +202,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "875d88f5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -244,8 +254,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "876707ae",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số thứ nhất: 1\n",
+      "Nhập số thứ hai: 23\n",
+      "Nhập số thứ ba: 4\n",
+      "Nhập số thứ tư: 5\n",
+      "Nhập số thứ năm: 6\n",
+      "Số lớn nhất là: 23\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 43>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     40\u001b[0m d \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNhập số thứ tư: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     41\u001b[0m e \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNhập số thứ năm: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m---> 43\u001b[0m \u001b[43mso_lon_nhi\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43me\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36mso_lon_nhi\u001b[1;34m(a, b, c, d, e)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28mmax\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(e)\n\u001b[1;32m---> 30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m:\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;28mmax\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(b)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mint\u001b[39m(c) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "###### SAI RỒI!!!!!!!!!!!!!!!!\n",
+    "\n",
+    "def so_lon_nhi(a, b, c, d, e):\n",
+    "    if int(a) >= int(e):\n",
+    "        max = int(a)\n",
+    "    else:\n",
+    "        max = int(e)\n",
+    "    if int(b) >= max:\n",
+    "        max = int(b)\n",
+    "    if int(c) >= max:\n",
+    "        max = int(c)\n",
+    "    if int(d) >= max:\n",
+    "        max = int(d)\n",
+    "    \n",
+    "    print(\"Số lớn nhất là:\", max)\n",
+    "        \n",
+    "    if a == max:\n",
+    "        a = \"\"\n",
+    "    elif b == max:\n",
+    "        b = \"\"\n",
+    "    elif c == max:\n",
+    "        c = \"\"\n",
+    "    elif d == max:\n",
+    "        d = \"\"\n",
+    "    else:\n",
+    "        e = \"\"\n",
+    "    \n",
+    "    if int(a) >= int(e):\n",
+    "        max = int(a)\n",
+    "    else:\n",
+    "        max = int(e)\n",
+    "    if int(b) >= max:\n",
+    "        max = int(b)\n",
+    "    if int(c) >= max:\n",
+    "        max = int(c)\n",
+    "    if int(d) >= max:\n",
+    "        max = int(d)\n",
+    "    \n",
+    "a = int(input(\"Nhập số thứ nhất: \"))\n",
+    "b = int(input(\"Nhập số thứ hai: \"))\n",
+    "c = int(input(\"Nhập số thứ ba: \"))\n",
+    "d = int(input(\"Nhập số thứ tư: \"))\n",
+    "e = int(input(\"Nhập số thứ năm: \"))\n",
+    "\n",
+    "so_lon_nhi(a, b, c, d, e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccb82e67",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "####### BÍ IDEA!!!!!!!!!!!!!!!\n",
+    "\n",
+    "def so_lon_nhi(a, b, c, d, e):\n",
+    "    if a >= e:\n",
+    "        max = a\n",
+    "    else:\n",
+    "        max = e\n",
+    "    if b >= max:\n",
+    "        max = b\n",
+    "    if c >= max:\n",
+    "        max = c\n",
+    "    if d >= max:\n",
+    "        max = d\n",
+    "    \n",
+    "    print(\"Số lớn nhất là:\", max)\n",
+    "        \n",
+    "    if a == max:\n",
+    "        a = \"\"\n",
+    "    elif b == max:\n",
+    "        b = \"\"\n",
+    "    elif c == max:\n",
+    "        c = \"\"\n",
+    "    elif d == max:\n",
+    "        d = \"\"\n",
+    "    else:\n",
+    "        e = \"\"\n",
+    "    \n",
+    "    if a >= e:\n",
+    "        max = a\n",
+    "    else:\n",
+    "        max = e\n",
+    "    if b >= max:\n",
+    "        max = b\n",
+    "    if c >= max:\n",
+    "        max = c\n",
+    "    if d >= max:\n",
+    "        max = d\n",
+    "    \n",
+    "a = int(input(\"Nhập số thứ nhất: \"))\n",
+    "b = int(input(\"Nhập số thứ hai: \"))\n",
+    "c = int(input(\"Nhập số thứ ba: \"))\n",
+    "d = int(input(\"Nhập số thứ tư: \"))\n",
+    "e = int(input(\"Nhập số thứ năm: \"))\n",
+    "\n",
+    "so_lon_nhi(a, b, c, d, e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12983b2b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -266,11 +413,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f7722021",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập tọa độ x1: 100\n",
+      "Nhập tọa độ y1: 50\n",
+      "Nhập bán kính R1: 50\n",
+      "Nhập tọa độ x2: 100\n",
+      "Nhập tọa độ y2: 50\n",
+      "Nhập bán kính R2: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "from turtle import *\n",
+    "speed(1)\n",
+    "\n",
+    "x1 = float(input(\"Nhập tọa độ x1: \"))\n",
+    "y1 = float(input(\"Nhập tọa độ y1: \"))\n",
+    "R1 = float(input(\"Nhập bán kính R1: \"))\n",
+    "\n",
+    "x2 = float(input(\"Nhập tọa độ x2: \"))\n",
+    "y2 = float(input(\"Nhập tọa độ y2: \"))\n",
+    "R2 = float(input(\"Nhập bán kính R2: \"))\n",
+    "\n",
+    "pu()\n",
+    "goto(x1 - R1, y1)\n",
+    "pd()\n",
+    "circle(R1)\n",
+    "\n",
+    "pu()\n",
+    "goto(x2 - R2, y2)\n",
+    "pd()\n",
+    "circle(R2)\n",
+    "\n",
+    "def giao_diem_2_hinh_tron():\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,7 +480,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e0d7b1a2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   },
@@ -335,7 +523,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0b699e33",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
