Update Buổi 16 - Thực hành hàm.ipynb

--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -391,11 +391,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "12983b2b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số thứ nhất: 36\n",
+      "Nhập số thứ hai: 95\n",
+      "Nhập số thứ ba: 645\n",
+      "Nhập số thứ tư: 82\n",
+      "Nhập số thứ năm: 3001\n",
+      "Số lớn thứ nhì là: 645\n"
+     ]
+    }
+   ],
+   "source": [
+    "def so_lon_nhi(a, b, c, d, e):\n",
+    "    if a < b:\n",
+    "        a, b = b, a\n",
+    "    if a < c:\n",
+    "        a, c = c, a\n",
+    "    if a < d:\n",
+    "        a, d = d, a    \n",
+    "    if a < e:\n",
+    "        a, e = e, a\n",
+    "    if b < c:\n",
+    "        b, c = c, b\n",
+    "    if b < d:\n",
+    "        b, d = d, b\n",
+    "    if b < e:\n",
+    "        b, e = e, b\n",
+    "        \n",
+    "    print(\"Số lớn thứ nhì là:\", b)\n",
+    "        \n",
+    "a = int(input(\"Nhập số thứ nhất: \"))\n",
+    "b = int(input(\"Nhập số thứ hai: \"))\n",
+    "c = int(input(\"Nhập số thứ ba: \"))\n",
+    "d = int(input(\"Nhập số thứ tư: \"))\n",
+    "e = int(input(\"Nhập số thứ năm: \"))\n",
+    "\n",
+    "so_lon_nhi(a, b, c, d, e)"
+   ]
   },
   {
    "cell_type": "markdown",
