Update Buổi 16 - Thực hành hàm.ipynb

--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f7722021",
    "metadata": {
     "scrolled": true
@@ -462,12 +462,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập tọa độ x1: 100\n",
-      "Nhập tọa độ y1: 50\n",
-      "Nhập bán kính R1: 50\n",
-      "Nhập tọa độ x2: 100\n",
-      "Nhập tọa độ y2: 50\n",
-      "Nhập bán kính R2: 100\n"
+      "Nhập tọa độ x1: 50\n",
+      "Nhập tọa độ y1: 100\n",
+      "Nhập bán kính R1: 25\n",
+      "Nhập tọa độ x2: 25\n",
+      "Nhập tọa độ y2: 100\n",
+      "Nhập bán kính R2: 50\n",
+      "Khoảng cách giữa tâm 2 hình tròn là: 25.0\n",
+      "Tổng số giao điểm của 2 đương tròn trên là: 1\n"
      ]
     }
    ],
@@ -483,18 +485,31 @@
     "y2 = float(input(\"Nhập tọa độ y2: \"))\n",
     "R2 = float(input(\"Nhập bán kính R2: \"))\n",
     "\n",
-    "pu()\n",
-    "goto(x1 - R1, y1)\n",
-    "pd()\n",
-    "circle(R1)\n",
+    "def giao_diem_2_hinh_tron(x1, y1, R1, x2, y2, R2):\n",
+    "    pu()\n",
+    "    goto(x1, y1 - R1)\n",
+    "    pd()\n",
+    "    circle(R1)\n",
     "\n",
-    "pu()\n",
-    "goto(x2 - R2, y2)\n",
-    "pd()\n",
-    "circle(R2)\n",
+    "    pu()\n",
+    "    goto(x2, y2)\n",
+    "    d = distance(x1, y1)\n",
+    "    goto(x2, y2 - R2)\n",
+    "    pd()\n",
+    "    circle(R2)\n",
     "\n",
-    "def giao_diem_2_hinh_tron():\n",
-    "    "
+    "    print(\"Khoảng cách giữa tâm 2 hình tròn là:\", d)\n",
+    "    \n",
+    "    if d == 0 and R1 == R2: # Cùng tâm và bán kính\n",
+    "        print(\"2 đường tròn trên có vô số giao điểm (2 đường tròn trùng nhau)\")\n",
+    "    elif d < abs(R1 - R2) or d > R1 + R2: # Ở trong hoặc ngoài nhau\n",
+    "        print(\"2 đường tròn trên không có giao điểm nào (không cắt nhau)\")\n",
+    "    elif d == R1 + R2 or d == abs(R1 - R2): # Ngoại tiếp or nội tiếp\n",
+    "        print(\"Tổng số giao điểm của 2 đương tròn trên là: 1\")\n",
+    "    elif abs(R1 - R2) < d < R1 + R2: # Cắt nhau\n",
+    "        print(\"Tổng số giao điểm của 2 đường tròn trên là: 2\")\n",
+    "    \n",
+    "giao_diem_2_hinh_tron(x1, y1, R1, x2, y2, R2)"
    ]
   },
   {
