Update Buổi 16 - Thực hành hàm.ipynb

--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "12983b2b",
    "metadata": {},
    "outputs": [
@@ -399,16 +399,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập số thứ nhất: 36\n",
-      "Nhập số thứ hai: 95\n",
-      "Nhập số thứ ba: 645\n",
-      "Nhập số thứ tư: 82\n",
-      "Nhập số thứ năm: 3001\n",
-      "Số lớn thứ nhì là: 645\n"
+      "Nhập số thứ nhất: 69\n",
+      "Nhập số thứ hai: 96\n",
+      "Nhập số thứ ba: 669\n",
+      "Nhập số thứ tư: 996\n",
+      "Nhập số thứ năm: 699\n",
+      "\n",
+      "Số lớn thứ nhì là: 699\n"
      ]
     }
    ],
    "source": [
+    "###### ĐÚNG RỒI NÈ!!!!!!!!!!!!\n",
+    "\n",
     "def so_lon_nhi(a, b, c, d, e):\n",
     "    if a < b:\n",
     "        a, b = b, a\n",
@@ -425,6 +428,7 @@
     "    if b < e:\n",
     "        b, e = e, b\n",
     "        \n",
+    "    print()\n",
     "    print(\"Số lớn thứ nhì là:\", b)\n",
     "        \n",
     "a = int(input(\"Nhập số thứ nhất: \"))\n",
@@ -532,13 +536,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e0d7b1a2",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập toạ độ đỉnh x1: 50\n",
+      "Nhập toạ độ đỉnh y1: 100\n",
+      "Nhập toạ độ đỉnh x2: 100\n",
+      "Nhập toạ độ đỉnh y2: 200\n",
+      "Nhập toạ độ tâm đường tròn x: 150\n",
+      "Nhập toạ độ tâm đường tròn y: 100\n",
+      "Nhập bán kính đường tròn: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "from turtle import *\n",
+    "\n",
+    "x1 = float(input(\"Nhập toạ độ đỉnh x1: \"))\n",
+    "y1 = float(input(\"Nhập toạ độ đỉnh y1: \"))\n",
+    "\n",
+    "x2 = float(input(\"Nhập toạ độ đỉnh x2: \"))\n",
+    "y2 = float(input(\"Nhập toạ độ đỉnh y2: \"))\n",
+    "\n",
+    "x = float(input(\"Nhập toạ độ tâm đường tròn x: \"))\n",
+    "y = float(input(\"Nhập toạ độ tâm đường tròn y: \"))\n",
+    "r = float(input(\"Nhập bán kính đường tròn: \"))\n",
+    "\n",
+    "pu()\n",
+    "goto(x, y - r) # Đi đến đáy hình tròn\n",
+    "pd()\n",
+    "circle(r) # Vẽ hình tròn\n",
+    "\n",
+    "pu()\n",
+    "goto(x1, y1) # Đỉnh 1\n",
+    "pd()\n",
+    "goto(x1, y2) # Đỉnh 3\n",
+    "goto(x2, y2) # Đỉnh 2\n",
+    "d = distance(x1, y1) # Chiều dài đường chéo hình chữ nhật (hcn)\n",
+    "goto(x2, y1) # Đỉnh 4\n",
+    "goto(x1, y1) # Vẽ xong hcn\n",
+    "\n",
+    "def giao_diem():\n",
+    "    if (x1 + x2) / 2 == x and (y1 + y2) / 2 == y: # Nếu tâm đối xứng hcn trùng với tâm đường tròn\n",
+    "        if d / 2 == r: # Nếu một phần hai đường chéo của hcn bằng với bán kinh hình tròn\n",
+    "            print(\"Có tất cả 4 giao điểm (hình chữ nhật nội tiếp hình tròn)\")\n",
+    "        elif d / 2 > r:\n",
+    "            print(\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -575,11 +626,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0b699e33",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số a: 1\n",
+      "True\n",
+      "Nhập số b: 6\n",
+      "True\n",
+      "Nhập số c: 4\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def so_nguyen_to(a): # Hàm kiểm tra số nguyên tố\n",
+    "    flag = True\n",
+    "    if a > 1:\n",
+    "        for i in range(2, a):\n",
+    "            if a % i == 0:\n",
+    "                flag = False\n",
+    "    if flag and a > 1:\n",
+    "        return flag\n",
+    "    else:\n",
+    "        return flag\n",
+    "    \n",
+    "a = int(input(\"Nhập số a: \")) # Nhập số để kiểm tra số nguyên tố\n",
+    "\n",
+    "print(so_nguyen_to(a)) # In kết quả của hàm kiểm tra số nguyên tố\n",
+    "\n",
+    "def so_hoan_hao(b): # Hàm kiểm tra số hoàn hảo\n",
+    "    tong = 0\n",
+    "    for i in range(1, b):\n",
+    "        if b % i == 0:\n",
+    "            tong += i\n",
+    "            \n",
+    "    if tong == b:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "b = int(input(\"Nhập số b: \")) # Nhập số để kiểm tra số hoàn hảo\n",
+    "        \n",
+    "print(so_hoan_hao(b)) # In kết quả của hàm kiểm tra số hoàn hảo\n",
+    "\n",
+    "def so_chinh_phuong(c): # Hàm kiểm tra số chính phương\n",
+    "    if c >= 0:\n",
+    "        if c ** 0.5 == int(c ** 0.5):\n",
+    "            return True\n",
+    "    return False\n",
+    "    \n",
+    "c = float(input(\"Nhập số c: \")) # Nhập số để kiểm tra số chính phương\n",
+    "\n",
+    "print(so_chinh_phuong(c)) # In kết quả của hàm kiểm tra số chính phương\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9df2f90e",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
