Update Buổi 16 - Thực hành hàm.ipynb

--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -626,21 +626,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "0b699e33",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập số a: 1\n",
+      "Nhập số a: 13\n",
       "True\n",
       "Nhập số b: 6\n",
       "True\n",
       "Nhập số c: 4\n",
+      "True\n",
+      "Nhập số d: 153\n",
       "True\n"
      ]
     }
@@ -685,14 +687,24 @@
     "c = float(input(\"Nhập số c: \")) # Nhập số để kiểm tra số chính phương\n",
     "\n",
     "print(so_chinh_phuong(c)) # In kết quả của hàm kiểm tra số chính phương\n",
+    "    \n",
+    "def so_armstrong(d): # Tạo hàm kiểm tra số Armstrong\n",
+    "    tong = 0\n",
+    "    for i in d:\n",
+    "        tong += int(i) ** len(d)\n",
+    "    if int(d) == tong:\n",
+    "        return True\n",
+    "    return False\n",
+    "        \n",
+    "d = input(\"Nhập số d: \") # Nhập số để kiểm tra số Armstrong\n",
     "\n",
-    "\n"
+    "print(so_armstrong(d)) # In ra kết quả hàm kiểm tra số Armstrong"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9df2f90e",
+   "id": "53eb5708",
    "metadata": {},
    "outputs": [],
    "source": []
