Update Buổi 16 - Thực hành hàm.ipynb

--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -115,9 +115,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "43958b8f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -626,24 +624,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "0b699e33",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập số a:  13\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập số a: 13\n",
-      "True\n",
-      "Nhập số b: 6\n",
-      "True\n",
-      "Nhập số c: 4\n",
-      "True\n",
-      "Nhập số d: 153\n",
       "True\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập số b:  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập số c:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập số d:  371\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào một chuỗi:  chuoi123ne45nha6\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 78>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     74\u001b[0m             chuoi \u001b[38;5;241m=\u001b[39m chuoi[i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m:]\n\u001b[0;32m     76\u001b[0m     \u001b[38;5;28mprint\u001b[39m(so)\n\u001b[1;32m---> 78\u001b[0m \u001b[43mloc_so_va_kiem_tra\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchuoi\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36mloc_so_va_kiem_tra\u001b[1;34m(chuoi)\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m so_chinh_phuong(so) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     69\u001b[0m     S \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m so\n\u001b[1;32m---> 70\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[43mso_armstrong\u001b[49m\u001b[43m(\u001b[49m\u001b[43mso\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     71\u001b[0m     S \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     73\u001b[0m so \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36mso_armstrong\u001b[1;34m(d)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mso_armstrong\u001b[39m(d): \u001b[38;5;66;03m# Tạo hàm kiểm tra số Armstrong\u001b[39;00m\n\u001b[0;32m     42\u001b[0m     tong \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m---> 43\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m d:\n\u001b[0;32m     44\u001b[0m         tong \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(i) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(d)\n\u001b[0;32m     45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mint\u001b[39m(d) \u001b[38;5;241m==\u001b[39m tong:\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
      ]
     }
    ],
@@ -698,16 +756,35 @@
     "        \n",
     "d = input(\"Nhập số d: \") # Nhập số để kiểm tra số Armstrong\n",
     "\n",
-    "print(so_armstrong(d)) # In ra kết quả hàm kiểm tra số Armstrong"
+    "print(so_armstrong(d)) # In ra kết quả hàm kiểm tra số Armstrong\n",
+    "\n",
+    "chuoi = input(\"Nhập vào một chuỗi: \")\n",
+    "def loc_so_va_kiem_tra(chuoi):\n",
+    "    S = 0\n",
+    "    so = \"\"\n",
+    "\n",
+    "    for i in chuoi:\n",
+    "        if i.isdigit():\n",
+    "            so += i\n",
+    "        elif so != \"\":\n",
+    "            so = int(so)\n",
+    "            \n",
+    "            if so_nguyen_to(so) == True:\n",
+    "                S += so\n",
+    "            elif so_hoan_hao(so) == True:\n",
+    "                S -= so\n",
+    "            elif so_chinh_phuong(so) == True:\n",
+    "                S /= so\n",
+    "            elif so_armstrong(so) == True:\n",
+    "                S = 0\n",
+    "            \n",
+    "            so = \"\"\n",
+    "            chuoi = chuoi[i + 1:]\n",
+    "\n",
+    "    print(so)\n",
+    "    \n",
+    "loc_so_va_kiem_tra(chuoi)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53eb5708",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
